# sui-compile

./: README.md  proof.json
host/: Cargo.toml
host/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
