[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.6", default-features = false, features = ['std'] }

# we need to compile sui types into zkvm
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types", tag="mainnet-v1.50.1"}
